--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
+    "date-fns": "^4.1.0",
     "next": "16.0.8",
     "pg": "^8.16.3",
     "react": "19.2.1",
